Containerizing the application